# ClimaSmart

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py  streamlit_app.py
climasmart/: __init__.py  utils.py
climasmart/anomaly/: __init__.py  detect_anomaly.py  drought_event_detector.py  forecast.py  forecast_transformer.py
climasmart/climate/: __init__.py  cli.py  climate_anomaly.py  climate_normal.py  climate_trend.py  climate_utils_io.py  utils.py
climasmart/data/: __init__.py  download_from_opendap.py  fetch_era5.py  gee_support.py  preprocess.py
climasmart/geospatial/: __init__.py  region.py
climasmart/indices/: __init__.py  fwi.py  ndvi_anomaly.py  rainfall_anomaly.py  scpdsi.py  spi.py
climasmart/tests/: test_cli.py  test_region.py
climasmart/visualize/: __init__.py  interactive_dashboard.py  plot_anomaly_map.py  plot_forecast.py  plot_heatmap.py
climasmart_env/: pyvenv.cfg
climasmart_env/Scripts/: activate  activate.bat
examples/: anomaly_detection_example.ipynb  cli_command_example.ipynb  climate_data_analysis.ipynb  compute_spi_example.ipynb
test_env/: pyvenv.cfg
test_env/Scripts/: activate  activate.bat
testenv/: pyvenv.cfg
testenv/Scripts/: activate  activate.bat
