[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "climasmart"
version = "0.1.1"
description = "A smart climate analysis tool"
authors = [
    { name = "Tadele Melese", email = "tadelemelese21m@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "scikit-learn>=1.0",
    "scipy>=1.7.0",
    "tensorflow>=2.8.0",
    "seaborn>=0.11.0",
    "streamlit>=1.10.0",
    "rasterio>=1.2.0",
    "geemap>=0.10.0",
    "earthengine-api>=0.1.355",
    "statsmodels>=0.13.0",
    "xarray"
]

[project.urls]
Homepage = "https://github.com/tadele-melese/climasmart"
Repository = "https://github.com/tadele-melese/climasmart"
